<resources>
    <string name="app_name">Divination Kit</string>
    <string name="login_welcome_msg">Welcome to the Club !</string>
    <string name="enter_your_username_here">Username</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_member_yet_register_here">Not a member yet? Register Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_a_member_login_here">Already a member? Login Here</string>
    <string name="its_free_and_simple">Its Free and Simple</string>
    <string name="username_cannot_be_empty">Username cannot be empty!</string>
    <string name="username_max_length_error">Username cannot be more than 25 characters length.</string>
    <string name="email_cannot_be_empty">Email cannot be empty!</string>
    <string name="password_cannot_be_empty">Password cannot be empty!.</string>
    <string name="password_min_length_error">Password must be at least 6 characters long!</string>
    <string name="confirm_password_cannot_be_empty">Confirm password cannot be empty!</string>
    <string name="confirm_password_must_match_the_password">Confirm password must match the password!</string>
    <string name="enter_valid_email_error">Please enter a valid email ID.</string>
    <string name="registered_successfully_msg">You\'re Registered SUCCESSFULLY!</string>
    <string name="email_already_registered">Email is already registered.</string>
    <string name="authentication_failed">Authentication FAILED! Please first register for an account, if you haven\'t already.</string>
    <string name="verification_mail_Sent">Verification mail has been sent to your email.</string>
    <string name="registration_failed">Registration process FAILED.</string>
    <string name="login_successfull">Login Successful.</string>
    <string name="verify_your_email">You need to verify your email before logging in. Please check your email.</string>
    <string name="unknown_error_occured">Some unknown error occurred. Please try again after some time.</string>
    <string name="verification_mail_couldnot_be_send">Verification mail couldn\'t be send.</string>
</resources>
